# comtrya

./: Cargo.toml  rustfmt.toml
.trunk/: trunk.yaml
app/: Cargo.toml  Cargo_BACKUP_156211.toml  Cargo_REMOTE_156211.toml
app/src/: main.rs
app/src/commands/: apply.rs  contexts.rs  gen_completions.rs  version.rs
app/src/config/: mod.rs
app/tests/utils/: mod.rs
docs/src/: binary.md
jsonschemagen/: Cargo.toml
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/actions/: mod.rs
lib/src/actions/binary/: github.rs
lib/src/actions/command/: run.rs
lib/src/actions/directory/: copy.rs  create.rs  mod.rs  remove.rs
lib/src/actions/file/: chown.rs  copy.rs  download.rs  link.rs  mod.rs  remove.rs  unarchive.rs
lib/src/actions/git/: clone.rs
lib/src/actions/group/: add.rs  mod.rs
lib/src/actions/group/providers/: freebsd.rs  linux.rs  macos.rs  mod.rs  none.rs
lib/src/actions/macos/: default.rs
lib/src/actions/package/: install.rs  mod.rs  repository.rs
lib/src/actions/package/providers/: aptitude.rs  bsdpkg.rs  dnf.rs  homebrew.rs  macports.rs  mod.rs  paru.rs  pkgin.rs  snapcraft.rs  winget.rs  xbps.rs  yay.rs  zypper.rs
lib/src/actions/plugin/: plugin.rs
lib/src/actions/user/: add.rs  add_group.rs  mod.rs
lib/src/actions/user/providers/: freebsd.rs  linux.rs  macos.rs  mod.rs  none.rs
lib/src/atoms/: mod.rs
lib/src/atoms/command/: exec.rs
lib/src/atoms/directory/: create.rs  remove.rs
lib/src/atoms/file/: chmod.rs  chown.rs  contents.rs  copy.rs  create.rs  decrypt.rs  link.rs  mod.rs  remove.rs  unarchive.rs
lib/src/atoms/git/: clone.rs
lib/src/atoms/http/: download.rs
lib/src/atoms/plugin/: exec.rs  mod.rs
lib/src/config/: mod.rs
lib/src/contexts/: mod.rs  os.rs  privilege.rs  user.rs
lib/src/contexts/variable_include/: dns.rs  mod.rs
lib/src/elevated_command/: linux.rs  macos.rs  mod.rs  windows.rs
lib/src/manifests/: load.rs  mod.rs
lib/src/manifests/providers/: git.rs  local.rs  mod.rs
lib/src/steps/: mod.rs
lib/src/steps/finalizers/: env_vars_remove.rs  mod.rs  output_contains.rs
lib/src/steps/initializers/: command_found.rs  env_vars_set.rs  file_exists.rs  mod.rs
lib/src/tera_functions/: mod.rs
lib/src/utilities/: mod.rs
lib/src/values/: mod.rs
