[package]
name = "comtrya"
version = "0.9.1"
authors = ["David McKay <david@rawkode.dev>"]
edition = "2024"
license = "MIT"
description = "A tool to simplify reprovisioning a fresh OS. Installs packages and manages dotfiles."

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
comtrya-lib = { path = "../lib", version = "0.9.1" }
dirs-next = { workspace = true }
gix = { workspace = true }
petgraph = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
strip-ansi-escapes = { workspace = true }
tealr = { workspace = true }
tracing = { workspace = true }
tracing-journald = { workspace = true }
tracing-subscriber = { workspace = true }
update-informer = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
