[package]
name = "comtrya-lib"
version = "0.9.1"
authors = ["David McKay <david@rawkode.dev>"]
edition = "2024"
license = "MIT"
description = "Contains the interfaces for comtrya plugins"

[dependencies]
age = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
dirs-next = { workspace = true }
file-owner = { workspace = true }
file_diff = { workspace = true }
flate2 = { workspace = true }
gethostname = { workspace = true }
gix = { workspace = true }
ignore = { workspace = true }
normpath = { workspace = true }
octocrab = { workspace = true }
os_info = { workspace = true }
parking_lot = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rhai = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yml = { workspace = true }
sha256 = { workspace = true }
tar = { workspace = true }
tealr = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
trust-dns-resolver = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
whoami = { workspace = true }

[target.'cfg(unix)'.dependencies]
uzers = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
